<resources>
    <string name="app_name">TrabalhoConclusao</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rust" translatable="false">Rust</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="invalid_login_and_or_pass">Invalid login and/or password</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="use_menu_navegacao_escolher_opcoes">Use the navigation menu to choose one of the available options</string>
    <string name="titulo">Title</string>
    <string name="ano">Year</string>
    <string name="genero">Genre</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="thriller">Thriller</string>
    <string name="sinopse">Synopsis</string>
    <string name="salvar">Save</string>
    <string name="cadastro">Registration</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="filmes">Movies</string>
    <string name="sobre">About</string>
    <string name="todos_campos_obrigatorios_ano_inteiro">All fields are required and year should be an integer</string>
</resources>
